--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "prisma": "^3.2.1",
     "ts-node-dev": "^1.1.8",
@@ -14,6 +15,8 @@
   },
   "dependencies": {
     "@prisma/client": "^3.2.1",
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1"
   }
 }
