--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "prisma": "^3.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
@@ -16,7 +17,9 @@
   "dependencies": {
     "@prisma/client": "^3.2.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
